add the header section

--- a/collections/index.html
+++ b/collections/index.html
@@ -9,7 +9,24 @@
   <link rel="stylesheet" href="./styles.css" />
 </head>
 
+
 <body>
+  <header>
+    <h1>Our Mission</h1>
+    <div class="header-description">
+      <div class="image-container">
+        <img src="./images/logo.png" alt="page logo" />
+      </div>
+      <p>We strive to bring people interesting and unique
+        art that inspires them to be more creative and enjoy
+        their homes. We know art can be expensive, so we
+        work with a rotating set of artists and
+        photographers to being you fantastic prints - all
+        for free. We just ask that you donate what you think
+        is fair, or share the site with someone who might
+        like great art as much as you do. </p>
+    </div>
+  </header>
   <section>
     <h2>Collections</h2>
     <ul>
