--- a/collections/index.html
+++ b/collections/index.html
@@ -74,6 +74,33 @@
       </li>
     </ul>
   </section>
+  <div class="footer">
+    <footer>
+      <div class="social">
+        <h4>Stay Connected!</h4>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com"
+              target="_blank"><img
+                src="images/facebook-icon.svg"
+                alt="Visit us at Facebook." /></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com"
+              target="_blank"><img
+                src="images/instagram-icon.svg"
+                alt="Visit us on Instagram." /></a>
+          </li>
+        </ul>
+      </div>
+      <address>
+        Wall of Wonder <br />
+        RBC Plaza<br />
+        60 South 6th Street<br />
+        Minneapolis, MN 55402
+      </address>
+    </footer>
+  </div>
 </body>
 
 </html>
